add quotes for build

--- a/yaml/in-progress/black-storytelling-matters.yaml
+++ b/yaml/in-progress/black-storytelling-matters.yaml
@@ -1,4 +1,4 @@
-title: Black Lives Matter - Netflix Category
+title: "Black Lives Matter - Netflix Category"
 curator: Netflix
 source: https://www.netflix.com/browse/genre/81299227
 type: film
@@ -6,218 +6,218 @@ description: Black lives matter. Learn more about racial injustice and the Black
 
 items: 
   - film:
-      title: #blackAF (2020)
+      title: "#blackAF (2020)"
       link: https://www.imdb.com/title/tt10311562/
       imdb: 10311562
   - film:
-      title: 13th (2016)
+      title: "13th (2016)"
       link: https://www.imdb.com/title/tt5895028/
       imdb: 5895028
   - film:
-      title: All American (2018-)
+      title: "All American (2018-)"
       link: https://www.imdb.com/title/tt7414406/
       imdb: 7414406
   - film:
-      title: All Day and a Night (2020)
+      title: "All Day and a Night (2020)"
       link: https://www.imdb.com/title/tt3993886/
       imdb: 3993886
   - film:
-      title: American Son (2019)
+      title: "American Son (2019)"
       link: https://www.imdb.com/title/tt9664078/
       imdb: 9664078
   - film:
-      title: Astronomy Club: The Sketch Show (2019)
+      title: "Astronomy Club: The Sketch Show (2019)"
       link: https://www.imdb.com/title/tt10675488/
       imdb: 10675488
   - film:
-      title: Barry (2016)
+      title: "Barry (2016)"
       link: https://www.imdb.com/title/tt5477566/
       imdb: 5477566
   - film:
-      title: Becoming (2020)
+      title: "Becoming (2020)"
       link: https://www.imdb.com/title/tt12221748/
       imdb: 12221748
   - film:
-      title: Bobby Kennedy for President (2018)
+      title: "Bobby Kennedy for President (2018)"
       link: https://www.imdb.com/title/tt8200004/
       imdb: 8200004
   - film:
-      title: Tamborine (2018)
+      title: "Tamborine (2018)"
       link: https://www.imdb.com/title/tt8005338/
       imdb: 8005338
   - film:
-      title: Da 5 Bloods (2020)
+      title: "Da 5 Bloods (2020)"
       link: https://www.imdb.com/title/tt9777644/
       imdb: 9777644
   - film:
-      title: Dear White People (2017-)
+      title: "Dear White People (2017-)"
       link: https://www.imdb.com/title/tt5707802/
       imdb: 5707802
   - film:
-      title: Get on the Bus (1996)
+      title: "Get on the Bus (1996)"
       link: https://www.imdb.com/title/tt0116404/
       imdb: 0116404
   - film:
-      title: Homecoming (2019)
+      title: "Homecoming (2019)"
       link: https://www.imdb.com/title/tt10147546/
       imdb: 10147546
   - film:
-      title: Imperial Dreams (2014)
+      title: "Imperial Dreams (2014)"
       link: https://www.imdb.com/title/tt3331028/
       imdb: 3331028
   - film:
-      title: Jewel's Catch One (2016)
+      title: "Jewel's Catch One (2016)"
       link: https://www.imdb.com/title/tt5562172/
       imdb: 5562172
   - film:
-      title: LA 92 (2017)
+      title: "LA 92 (2017)"
       link: https://www.imdb.com/title/tt6794424/
       imdb: 6794424
   - film:
-      title: Let It Fall: Los Angeles 1982-1992 (2017)
+      title: "Let It Fall: Los Angeles 1982-1992 (2017)"
       link: https://www.imdb.com/title/tt6379314/
       imdb: 6379314
   - film:
-      title: Malcolm X (1992)
+      title: "Malcolm X (1992)"
       link: https://www.imdb.com/title/tt0243518/
       imdb: 0243518
   - film:
-      title: Luke Cage (2016-2018)
+      title: "Luke Cage (2016-2018)"
       link: https://www.imdb.com/title/tt3322314/
       imdb: 3322314
   - film:
-      title: Michael Che Matters (2016)
+      title: "Michael Che Matters (2016)"
       link: https://www.imdb.com/title/tt6209400/
       imdb: 6209400
   - film:
-      title: Miss Virginia (2019)
+      title: "Miss Virginia (2019)"
       link: https://www.imdb.com/title/tt6246534/
       imdb: 6246534
   - film:
-      title: Moonlight (2016)
+      title: "Moonlight (2016)"
       link: https://www.imdb.com/title/tt4975722/
       imdb: 4975722
   - film:
-      title: Mudbound (2017)
+      title: "Mudbound (2017)"
       link: https://www.imdb.com/title/tt2396589/
       imdb: 2396589
   - film:
-      title: Oprah Winfrey Presents: When They See Us Now (2019)
+      title: "Oprah Winfrey Presents: When They See Us Now (2019)"
       link: https://www.imdb.com/title/tt10484298/
       imdb: 10484298
   - film:
-      title: Orange Is the New Black (2013-2019)
+      title: "Orange Is the New Black (2013-2019)"
       link: https://www.imdb.com/title/tt2372162/
       imdb: 2372162
   - film:
-      title: Pose (2018-)
+      title: "Pose (2018-)"
       link: https://www.imdb.com/title/tt7562112/
       imdb: 7562112
   - film:
-      title: Quincy (2018)
+      title: "Quincy (2018)"
       link: https://www.imdb.com/title/tt7440432/
       imdb: 7440432
   - film:
-      title: ReMastered: The Devil at the Crossroads (2018)
+      title: "ReMastered: The Devil at the Crossroads (2018)"
       link: www.imdb.com/title/tt9046574/
       imdb: 9046574
   - film:
-      title: ReMastered: The Lion's Share (2019)
+      title: "ReMastered: The Lion's Share (2019)"
       link: https://www.imdb.com/title/tt9046576/
       imdb: 9046576
   - film:
-      title: ReMastered: The Two Killings of Sam Cooke (2019)
+      title: "ReMastered: The Two Killings of Sam Cooke (2019)"
       link: https://www.imdb.com/title/tt9046564/
       imdb: 9046564
   - film:
-      title: ReMastered: Who Killed Jam Master Jay? (2019)
+      title: "ReMastered: Who Killed Jam Master Jay? (2019)"
       link: https://www.imdb.com/title/tt9046560/
       imdb: 9046560
   - film:
-      title: ReMastered: Who Shot the Sheriff? (2018)
+      title: "ReMastered: Who Shot the Sheriff? (2018)"
       link: https://www.imdb.com/title/tt9046548/
       imdb: 9046548
   - film:
-      title: Rodney King (2017)
+      title: "Rodney King (2017)"
       link: https://www.imdb.com/title/tt6624312/
       imdb: 6624312
   - film:
-      title: School Daze (1988)
+      title: "School Daze (1988)"
       link: https://www.imdb.com/title/tt0096054/
       imdb: 0096054
   - film:
-      title: See You Yesterday (2019)
+      title: "See You Yesterday (2019)"
       link: https://www.imdb.com/title/tt8743064/
       imdb: 8743064
   - film:
-      title: Self-Made: Inspired by the Life of Madam C.J. Walker (2020)
+      title: "Self-Made: Inspired by the Life of Madam C.J. Walker (2020)"
       link: https://www.imdb.com/title/tt8771910/
       imdb: 8771910
   - film:
-      title: Seven Seconds (2018)
+      title: "Seven Seconds (2018)"
       link: https://www.imdb.com/title/tt6297682/
       imdb: 6297682
   - film:
-      title: She's Gotta Have It (1986)
+      title: "She's Gotta Have It (1986)"
       link: https://www.imdb.com/title/tt0091939/
       imdb: 0091939
   - film:
-      title: She's Gotta Have It (2017-2018)
+      title: "She's Gotta Have It (2017-2018)"
       link: https://www.imdb.com/title/tt0091939/
       imdb: 0091939
   - film:
-      title: Strong Island (2017)
+      title: "Strong Island (2017)"
       link: https://www.imdb.com/title/tt5873150/
       imdb: 5873150
   - film:
-      title: Teach Us All (2017)
+      title: "Teach Us All (2017)"
       link: https://www.imdb.com/title/tt6588332/
       imdb: 6588332
   - film:
-      title: The Black Godfather (2019)
+      title: "The Black Godfather (2019)"
       link: https://www.imdb.com/title/tt10289996/
       imdb: 10289996
   - film:
-      title: The Innocence Files (2020)
+      title: "The Innocence Files (2020)"
       link: https://www.imdb.com/title/tt11958922/
       imdb: 11958922
   - film:
-      title: They've Gotta Have Us (2018)
+      title: "They've Gotta Have Us (2018)"
       link: https://www.imdb.com/title/tt9268756/
       imdb: 9268756
   - film:
-      title: Time: The Kalief Browder Story (2017)
+      title: "Time: The Kalief Browder Story (2017)"
       link: https://www.imdb.com/title/tt6133034/
       imdb: 6133034
   - film:
-      title: Trevor Noah: Son of Patricia (2018)
+      title: "Trevor Noah: Son of Patricia (2018)"
       link: https://www.imdb.com/title/tt9170648/
       imdb: 9170648
   - film:
-      title: Trigger Warning with Killer Mike (2019)
+      title: "Trigger Warning with Killer Mike (2019)"
       link: https://www.imdb.com/title/tt9426194/
       imdb: 9426194
   - film:
-      title: Uppity: The Willy T. Ribbs Story (2020)
+      title: "Uppity: The Willy T. Ribbs Story (2020)"
       link: https://www.imdb.com/title/tt5862338/
       imdb: 5862338
   - film:
-      title: Wanda Sykes: Not Normal (2019)
+      title: "Wanda Sykes: Not Normal (2019)"
       link: https://www.imdb.com/title/tt9169592/
       imdb: 9169592
   - film:
-      title: What Happened, Miss Simone? (2015)
+      title: "What Happened, Miss Simone? (2015)"
       link: https://www.imdb.com/title/tt4284010/
       imdb: 4284010
   - film:
-      title: When They See Us (2019)
+      title: "When They See Us (2019)"
       link: https://www.imdb.com/title/tt7137906/
       imdb: 7137906
   - film:
-      title: Who Killed Malcolm X? (2020)
+      title: "Who Killed Malcolm X? (2020)"
       link: https://www.imdb.com/title/tt10948316/
       imdb: 10948316
   - film:
-      title: Zion: Body of Strength (2018)
+      title: "Zion: Body of Strength (2018)"
       link: https://https://www.imdb.com/title/tt7820962/
       imdb: 7820962
